--- a/plugins/mcreator-localization/lang/texts.properties
+++ b/plugins/mcreator-localization/lang/texts.properties
@@ -2392,6 +2392,8 @@ elementgui.block.fluid_capacity=<html>Maximal fluid capacity:<br><small>Unit: mi
 elementgui.block.fluid_restrictions=<html>Restrict accepted fluids:<br><small>Empty means not restriction. Include flowing and still fluid
 elementgui.block.tile_entity_tip=Note: Block entity needs to be enabled for energy storage and fluid tanks to work.
 elementgui.block.settings_inventory=Inventory settings
+elementgui.block.block_entity_java_model=Block entity Java model
+elementgui.block.block_entity_java_model_selector=<html>Block entity Java model<br><small>When selected, this model will override default block model logic
 elementgui.block.generate_feature=Check to enable ore feature generation in the world:
 elementgui.block.generation_shape=Generation shape:
 elementgui.block.gen_replace_blocks=Blocks this block can replace:
